# sneakernet

./: .gitignore  CLAUDE.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  commands.rs  exchange.rs  iroh_derive.rs  iroh_node.rs  keys.rs  lib.rs
src/components/: Chat.tsx  ContactList.tsx  KeyDisplay.tsx  NFCExchange.tsx  QRExchange.tsx
src/lib/: tauri.ts  types.ts
src/styles/: main.css
